<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">多功能服务机器人</string>
    <string name="start_guide">继续引领</string>
    <string name="stop_guide">结束引领</string>
    <string name="change_destination">更改地点</string>
    <string name="time_count">%ss</string>
    <string name="please_input_room_number_chinese">请输入房间号</string>
    <string name="please_input_room_number_english">Please enter the room number</string>
    <string name="please_input_password_chinese">请输入密码</string>
    <string name="please_input_password_english">Please enter the verification password</string>
    <string name="image_description">image description</string>
    <string name="test_text">test_text</string>
    <string name="guide">引领</string>
    <string name="send">送物</string>
    <string name="guide_in_english_upper_case">GUIDE</string>
    <string name="send_in_english_upper_case">ACCESSORIES</string>
    <string name="public_area">公共区</string>
    <string name="room_number">房间号</string>
    <string name="start_navigation">出发</string>
    <string name="ready_arrived">%s已经到了到啦！</string>
    <string name="calling_lift">正在呼叫电梯</string>
    <string name="into_lift">我要进电梯了，麻烦让一让</string>
    <string name="go_up">%s\t\t|\t\t我要去%s</string>
    <string name="out_lift">我要出电梯了，麻烦让一让</string>
    <string name="ensure">确定</string>
    <string name="bin_1">1号仓</string>
    <string name="bin_2">2号仓</string>
    <string name="send_to">送往： %s</string>
    <string name="send_to_default">送往： ----</string>
    <string name="open_bin">开仓</string>
    <string name="close_bin">关仓</string>
    <string name="home_page">返回</string>
    <string name="please_put_object_and_choose_place">（请放入物品并选择目的点）</string>
    <string name="bin1_opened">1号仓已打开</string>
    <string name="bin2_opened">2号仓已打开</string>
    <string name="send_place_selected">已选择：%s</string>
    <string name="sending">我正在工作，请不要打扰我</string>
    <string name="your_package_is_in_bin_1">您的包裹在1号仓</string>
    <string name="your_package_is_in_bin_2">您的包裹在2号仓</string>
    <string name="please_take_your_object_in_seconds">请在%ds内尽快开仓取物</string>
    <string name="please_take_your_object_in_seconds_opened">请在%ds内取出物品并关仓</string>
    <string name="bin1_opened_2">1号仓门已打开</string>
    <string name="bin2_opened_2">2号仓门已打开</string>
    <string name="go_back">正在返回中</string>
    <string name="xiao_di_pausing">小迪暂停中…</string>
    <string name="brightness_setting">亮度设置</string>
    <string name="version_setting">版本设置</string>
    <string name="current_version">当前版本：v%s</string>
    <string name="check_version">检查更新</string>
    <string name="accessibility">辅助功能</string>
    <string name="bin_door_open">仓门开关</string>
    <string name="open_door">开门</string>
    <string name="close_door">关门</string>
    <string name="map_setting">地图设置</string>
    <string name="choose_map">选择地图</string>
    <string name="choose_charging_pile">充电桩选点</string>
    <string name="choose_place">选择地点</string>
    <string name="charge_pile_reminder">一个充电桩仅供一台机器人绑定使用，请勿重复绑定</string>
    <string name="speed_setting">速度设置</string>
    <string name="volume_setting">音量设置</string>
    <string name="duration_setting">时长设置</string>
    <string name="put_object_duration">开仓放物限时</string>
    <string name="wait_take_object_duration">等待取物限时</string>
    <string name="take_object_duration">开仓取物限时</string>
    <string name="take_object_verification_code">取物验证码</string>
    <string name="take_object_verification_code_reminder">开启后，用户需要输入房间号的数字通过验证才能开仓取物</string>
    <string name="walk_pause_duration">行走暂停限时</string>
    <string name="wifi_open">WLAN</string>
    <string name="connected">已连接</string>
    <string name="choose_wifi">选取网络</string>
    <string name="service_phone">服务热线</string>
    <string name="service_phone_number" tools:ignore="TypographyDashes">400-830-3030</string>
    <string name="producer">制造商</string>
    <string name="producer_name">广州市申迪计算机系统有限公司</string>
    <string name="robot_use_time_limit">机器人使用期限</string>
    <string name="sendi_official_accounts">广州申迪公众号</string>
    <string name="join">加入</string>
    <string name="connect_wifi_reminder">连接WiFi网络“%s”需要输入密码：</string>
    <string name="welcome_use_robot_please_input_room_number">欢迎使用机器人，请输入要前往的房间号</string>
    <string name="i_am_in_trouble">我好像遇到麻烦了</string>
    <string name="please_take_photo_or_video_and_contact_service" tools:ignore="TypographyDashes">请拍照或录视频，联系客服处理。\n客服电话: 400-830-3030</string>
    <string name="error_code">错误编码：%s</string>
    <string name="i_just_distracted">我刚刚走神了</string>
    <string name="i_just_distracted_2">我好像开小差了</string>
    <string name="you_can_do_this">您可以进行以下操作: \n 把我推到充电桩上 \n 确保充电桩前方没有遮挡物</string>
    <string name="you_can_do_this_remind_1">▪ 确保充电桩前方没有遮挡物</string>
    <string name="you_can_do_this_remind_2">▪ 把我推到充电桩上</string>
    <string name="please_try_reboot">请尝试重启</string>
    <string name="stop_button_press">急停开启</string>
    <string name="please_reset_stop_button">请先复位急停按钮</string>
    <string name="please_do_not_crowd_me">麻烦让我过一下</string>
    <string name="i_can_offer_this_service">我可以为您提供以下服务</string>
    <string name="back">返回</string>
    <string name="charging" tools:ignore="TypographyEllipsis">充电中...</string>
    <string name="present">%</string>
    <string name="charge_point_not_set">充电点未设置,请到设置页设置</string>
    <string name="charge_point_not_set_for_return">充电点未设置,无法完成低电量自主充电</string>
    <string name="bin_1_not_take">1号仓物品未取出</string>
    <string name="bin_2_not_take">2号仓物品未取出</string>
    <string name="bin_1_bin_2_not_take">1号仓、2号仓物品均未取出</string>
    <string name="confirm_to_dock">确定完成对接</string>
    <string name="docking">正在连接充电桩..</string>
    <string name="begin_hand_push">开始手推</string>
    <string name="dock_success">连接成功！</string>
    <string name="dock_fail">对接失败</string>
    <string name="please_press_button_and_push_me_to_charge">请按下急停按钮\n 将我推到充电桩处充电</string>
    <string name="please_let_me_return">请先让我回充电桩补充精力吧</string>
    <string name="low_power">电量不足</string>
    <string name="please_input_take_object_code">请输取件码，及时取走您的物品：</string>
    <string name="can_not_do_task">我没法出发</string>
    <string name="please_pull_out_adapter">请先拔出电源线</string>
    <string name="exception_wait_for_help">我要在这里等工作人员来救我了！</string>
    <string name="exception">故障啦！</string>
    <string name="create_laser_map">创建激光图</string>
    <string name="export_file">导出</string>
    <string name="import_file">导入</string>
    <string name="str_input_pwd_tip">数字加字母6位数</string>
    <string name="str_input_account">请输入账号</string>
    <string name="str_input_pwd">请输入密码</string>
    <string name="str_pwd">密码</string>
    <string name="str_login">登录</string>
    <string name="str_exit">退出</string>
    <string name="str_back">上一级</string>
    <string name="str_debug_login_input_tip">请输入完整登录信息</string>
    <string name="str_debug_login_error_tip">账号密码错误</string>
    <string name="delete">删除</string>
    <string name="laser_name">激光扫建子图页面</string>
    <string name="laser_start_scan">开始扫描</string>
    <string name="laser_document_name">激光图文件名称</string>
    <string name="laser_hint">名称最好包含酒店名字简写和楼层数字，便于【见名知意】</string>
    <string name="laser_start">确认开始</string>
    <string name="str_create_general_view">创建总图</string>
    <string name="str_target_view">创建目标点</string>
    <string name="str_general_view_title">新建总图页面</string>
    <string name="str_last_step">上一步</string>
    <string name="str_next">下一步</string>
    <string name="str_complete_binding">完成</string>
    <string name="str_select_all">全选</string>
    <string name="str_file_name">文件名称:</string>
    <string name="str_input_map_name">请输入总图名</string>
    <string name="str_general_view_name_input_tip">请输入总图名</string>
    <string name="str_map_name_repetition_tip">总图名已存在,请修改</string>
    <string name="str_general_view_file">总图文件：</string>
    <string name="str_target_file">目标点图文件：</string>
    <string name="str_Road_Map_file">路径总图文件：</string>
    <string name="laser_file">激光图文件：</string>
    <string name="laser_stop_scan">结束扫描</string>
    <string name="reset">重置</string>
    <string name="please_confirm_save_sub_map">请确认是否要保存该子图？</string>
    <string name="confirm">确认</string>
    <string name="shut_down">电量过低，即将自动关机</string>
    <string name="goto_setting">前往开仓</string>
    <string name="are_you_sure_reset_sub_map">确认要重置该子图吗？</string>
    <string name="reset_remind">重置后会清除当前子图，并保留之前的子图后退出扫描</string>
    <string name="cancel">取消</string>
    <string name="create_laser_map_hint">请输入激光图名称</string>
    <string name="back_right_arrow">返回</string>
    <string name="fix_laser_map">激光修正图页面：</string>
    <string name="fix">修正</string>
    <string name="please_input_fix_map_id">请输入2个子图编号进行修正操作</string>
    <string name="sub_map_1">子图编号一</string>
    <string name="sub_map_2">子图编号二</string>
    <string name="start_fix">开始修正</string>
    <string name="fix_laser_map_2">激光修正图页面</string>
    <string name="adjustment_coefficient">调整系数</string>
    <string name="done">完成</string>
    <string name="check_laser_map">查看激光图页面</string>
    <string name="source_file_edit">源文件编辑</string>
    <string name="copy_file_edit">副本编辑</string>
    <string name="continue_fix">继续修正</string>
    <string name="continue_scan">继续扫描</string>
    <string name="relocation_laser">激光图重定位页面</string>
    <string name="str_laser">激光图</string>
    <string name="str_sel_map_hint">请选择激光图</string>
    <string name="str_start">开始</string>
    <string name="str_end">结束</string>
    <string name="str_route_name">路径图文件名称</string>
    <string name="str_create_route_map">创建路径图</string>
    <string name="str_input_route_name">请输入路径图名</string>
    <string name="str_input_sort_name">请输入分类名</string>
    <string name="str_input_target_name">请输入目标点名</string>
    <string name="str_sort_name_title">分类名称</string>
    <string name="str_mode_switch">模式切换</string>
    <string name="str_mark">标记</string>
    <string name="str_save">保存</string>
    <string name="str_target_point_name_title">目标点名称</string>
    <string name="str_target_point_sort_title">目标点分类</string>
    <string name="str_target_cover_title">补位方向</string>
    <string name="str_left_right">左右</string>
    <string name="str_front_back">前后</string>
    <string name="auto_cruise">自动巡航</string>
    <string name="delete_laser_map_remind">确认后，该激光图所关联的路径图和目标点图都会一起被删除，请谨慎操作！</string>
    <string name="floor_name">楼层名称</string>
    <string name="floor_code">楼层编码</string>
    <string name="floor_name_hint">如：2</string>
    <string name="floor_code_hint">如：4</string>
    <string name="give_up">放弃</string>
    <string name="choose_relocate_remind">请选择就近房间号并将我推至该房间门前，然后点击关仓按钮，我将会继续任务或返航</string>
    <string name="navigate_fail">导航失败，定位丢失\n可推动机器人前往重定位</string>
    <string name="go_to_relocation">前往重定位</string>
    <string name="go_back_charge">返回充电桩</string>
    <string name="clear_all_fix">清除所有修正</string>
    <string name="start_docking">%s要开始对接充电桩啦</string>
    <string name="i_just_was_born">我刚出生不久，动作有点慢，请您包容</string>
    <string name="i_continue_work">我要继续工作啦，拜拜，下次见</string>
    <string name="door_opening_please_put_things">仓门正在开启，请准备放入物品和选择目的点</string>
    <string name="door_closing_take_care_hands">仓门正在关闭，请小心夹手哦</string>
    <string name="enen">咳咳</string>
    <string name="i_lose_my_way">我迷路了</string>
    <string name="your_things_arrived">您的宝贝到啦，快来认领宝贝吧</string>
    <string name="point_arrived">%s到啦，我的任务完成啦，祝您生活愉快，拜拜啰~</string>
    <string name="i_going_into_lift">我要进电梯啦，麻烦往里走走，把中间位置留给我，没挤着您吧，谢谢您的帮助</string>
    <string name="please_left_the_center_for_me">我是这里的配送机器人，我要进电梯了，麻烦把中间位置让给我，谢谢您的关照</string>
    <string name="excuse_me">麻烦让一让，谢谢</string>
    <string name="can_i_help_you">您好，有什么需要帮助的呢？</string>
    <string name="welcome_understand">嗨，我是%s，欢迎前来了解智能服务机器人</string>
    <string name="welcome_vip_understand">"您好 %s，我是%s，欢迎前来了解智能服务机器人"</string>
    <string name="range">Range</string>
    <string name="please_input_range">请输入到内点的距离</string>
    <string name="elevator">电梯</string>
</resources>